Don't auto-update Cake.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ build/
 obj/
 
 # ignore downloaded tools
-tools/
+tools/*
+!tools/packages.config
 
 # ignore user-specific options/cache files
 packages/
