--- a/Faithlife.Utility.Dapper.nuspec
+++ b/Faithlife.Utility.Dapper.nuspec
@@ -15,6 +15,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="src\Faithlife.Utility.Dapper\bin\$configuration$\Faithlife.Utility.Dapper.*" target="lib/net45" />
+    <file src="src\Faithlife.Utility.Dapper\bin\$configuration$\Faithlife.Utility.Dapper.dll" target="lib/net45" />
+    <file src="src\Faithlife.Utility.Dapper\bin\$configuration$\Faithlife.Utility.Dapper.pdb" target="lib/net45" />
+    <file src="src\Faithlife.Utility.Dapper\bin\$configuration$\Faithlife.Utility.Dapper.xml" target="lib/net45" />
   </files>
 </package>
