--- a/src/Faithlife.Utility.Dapper/project.json
+++ b/src/Faithlife.Utility.Dapper/project.json
@@ -1,6 +1,6 @@
 {
   "name": "Faithlife.Utility.Dapper",
-  "version": "1.0.0-beta2",
+  "version": "1.0.0-rc1",
   "title": "Faithlife.Utility.Dapper",
   "description": "A utility library for Dapper.",
   "copyright": "Copyright 2016 Faithlife Corporation",
