--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install:
   - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
   - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
   - sudo apt-get update
-  - sudo apt-get install -y dotnet-dev-1.0.0-preview2-003121
+  - sudo apt-get install -y dotnet-dev-1.0.1
 
 script:
   - dotnet restore
-  - dotnet test tests/Faithlife.Utility.Dapper.Tests -f netcoreapp1.0
+  - dotnet test tests/Faithlife.Utility.Dapper.Tests -c Release -f netcoreapp1.1
