--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 version: '{build}'
+image: Visual Studio 2017
 environment:
-  COVERALLSAPIKEY:
-    secure: 51xcujGh5ZpkyLsSZQM+E2YbHnSToRUUeXBpoUDrDTrHQZ5Nn3aSpzIYCXj3CaFy
+  NUGETAPIKEY:
+    secure: hPo98uWApLeubFt4LvY7wXpLKExUDaQbtzn4qCKXTq2C4wH2H9K3dFusJDLMTaff
 build_script:
-- ps: .\build.ps1 -target=CoveragePublish -configuration=Debug "-coverallsApiKey=$env:COVERALLSAPIKEY"
+- ps: .\build.ps1 --target=NuGetPublish """--trigger=$env:APPVEYOR_REPO_TAG_NAME""" "--nugetApiKey=$env:NUGETAPIKEY"
 test: off
